# chat

./: README.md  main.py  pyproject.toml
static/css/: style.css
templates/: base.html  choice_room.html  home.html  room.html  script.js
